Header height fix, font changes, alignment issues

--- a/summit/scss/combined.scss
+++ b/summit/scss/combined.scss
@@ -1092,7 +1092,6 @@ footer {
 .tokyo-landing-wrapper.shanghai {
   position: relative;
   width: 100%;
-  height: 100%;
   text-align: center;
   padding: 70px 0;
   background-image: url('#{$static_images_base_url}/boston/boston-bkgd.jpg');
@@ -1108,15 +1107,13 @@ footer {
 .tokyo-landing-wrapper {
   position: relative;
   width: 100%;
-  height: 100%;
   text-align: center;
   padding: 70px 0;
   background: url('#{$static_images_base_url}/summits/overview/austin-bkgd-lrg.jpg') no-repeat right top;
   background-size: cover; }
 
 img.tokyo-landing-logo {
-  width:84%; 
-  margin-bottom: 6.5rem;
+  width: 84%;
 }
 
 .save-the-date {
@@ -1290,22 +1287,23 @@ a.current-summit-link {
 /* Shanghai landing */
 .join-us-text-white {
   color: #fff;
-  font-size: 2.6em;
+  font-size: 3.6em;
   font-weight: 900;
 }
 .join-us-text-white-date {
   color: #fff;
   font-size: 1.2em;
   font-weight: bold;
-  padding-top:15px;
+  padding-bottom:65px;
 }
 .join-us-text-black {
   color: #000;
   font-size: 1.2em;
   font-weight: normal;
 }
-.join-us-text-black a {
+.join-us-text-black a, .join-us-text-black a:visited {
   color: #ed1944;
+  text-decoration: underline;
 }
 .join-us-text-red {
   font-size: 2.4em;
